Completing the readme.md and final adjustments to the project
Completing the readme.md and final adjustments to the project

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         
         <div class="form-group">
         <h2>Contract Administration (owner/admin)</h2>
-            Data Contract Address:
+            Deployed App Contract Address:
             <input type="text" id="appAddress" name="appAddress" value="0x0000000000000000000000000000000000000000" size="50" disabled="true"><br><br>
             <!-- <input class="input-field" type="number" id="sku" name="sku" value="0"><br> -->
             App Contract Operational Status
@@ -42,7 +42,8 @@
                 <input type="radio" id="dataStatus_radio_1" name="dataContractStatus" value="notoperational"/> 
                 <label for="dataStatus_radio_1">Not Operational</label>
            </div>
-           Data Contract Address:
+           <br>
+           Authorize Data Contract to use App Contract Address:
             <input type="text" id="appAddress2" name="appAddress" value="0x0000000000000000000000000000000000000000" size="50"><br><br>
            <div class="button-div">
                 <button class="btn-fetchOne" type="button" data-id="0">Get AppContract Address</button>
